--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <button onclick="register(); return false">nihao</button>
+    <script>
+        提交3.3
+    </script>
 </body>
 </html>
